--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,24 +11,24 @@
     "commit": "cz"
   },
   "dependencies": {
-    "autoprefixer": "latest",
     "axios": "^1.5.1",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "next": "latest",
-    "postcss": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "tailwindcss": "latest",
     "tailwindcss-debug-screens": "^2.2.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "classnames": "^2.3.2",
     "cz-git": "^1.7.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.4.1"
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.3.5"
   },
   "config": {
     "commitizen": {
