--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,12 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "mongoose": "^8.1.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
