--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,337 +1,6 @@
-absl-py==1.4.0
-addict==2.4.0
-aenum==3.1.15
-aiofiles==23.1.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-altair==4.2.2
-antlr4-python3-runtime==4.8
-anyio==3.6.2
-appdirs==1.4.4
-apt-xapian-index==0.49
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-astor==0.8.1
-asttokens==2.2.1
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==22.2.0
-audioread==3.0.0
-autopep8==2.0.1
-backcall==0.2.0
-basicsr==1.4.2
-bcrypt==4.0.1
-beautifulsoup4==4.11.2
-bitarray==2.8.0
-bleach==6.0.0
-blendmodes==2022
-blessed==1.20.0
-blinker==1.6.2
-boltons==23.0.0
-cachetools==5.3.0
-cattrs==22.2.0
-certifi==2022.12.7
-cffi==1.15.1
-chardet==4.0.0
-charset-normalizer==2.0.12
-clean-fid==0.1.35
-click==8.1.7
-clip @ https://github.com/openai/CLIP/archive/d50d76daa670286dd6cacf3bcd80b5e4823fc8e1.zip
-cmake==3.26.4
-colorama==0.4.6
-comm==0.1.2
-command-not-found==0.3
-commonmark==0.9.1
-contourpy==1.0.7
-cryptography==3.4.8
-cupshelpers==1.0
-cycler==0.11.0
-Cython==3.0.0
-dbus-python==1.2.18
-debugpy==1.6.6
-decorator==5.1.1
-defusedxml==0.7.1
-deprecation==2.1.0
-dill==0.3.7
-distlib==0.3.4
-distro==1.7.0
-distro-info==1.1+ubuntu0.1
-entrypoints==0.4
-exceptiongroup==1.1.0
-executing==1.2.0
-facexlib==0.3.0
-fairseq==0.12.2
-faiss-cpu==1.7.3
-fastapi==0.88.0
-fastf1==2.3.0
-fastjsonschema==2.16.2
-ffmpeg-python==0.2.0
-ffmpy==0.3.0
-filelock==3.12.2
-filterpy==1.4.5
-Flask==3.0.0
-Flask-Cors==4.0.0
-flatbuffers==23.3.3
-fonttools==4.38.0
-fqdn==1.5.1
-frozendict==2.3.4
-frozenlist==1.3.3
-fsspec==2023.6.0
-ftfy==6.1.1
-fuse-python==1.0.2
-future==0.18.3
-gast==0.4.0
-gdown==4.7.1
-gfpgan==1.3.8
-gitdb==4.0.10
-google-pasta==0.2.0
-gpg==1.16.0
-gradio==3.34.0
-gradio_client==0.2.7
-grpcio==1.54.0
-gunicorn==21.2.0
-h11==0.12.0
-h5py==3.8.0
-html5lib==1.1
-httpcore==0.15.0
-httplib2==0.20.2
-httpx==0.23.0
-hydra-core==1.0.7
-idna==3.4
-imageio==2.31.1
-importlib-metadata==6.8.0
-inflection==0.5.1
-inquirer==3.1.3
-ipykernel==6.21.1
-ipython==8.9.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
-itsdangerous==2.1.2
-jax==0.4.8
-jedi==0.18.2
-jeepney==0.7.1
-Jinja2==3.1.2
-joblib==1.2.0
-json5==0.9.14
-jsonmerge==1.8.0
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.4.4
-jupyter-events==0.6.3
-jupyter_client==8.0.2
-jupyter_core==5.2.0
-jupyter_server==2.2.1
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
-keras==2.12.0
-keyring==23.5.0
-kiwisolver==1.4.4
-kornia==0.6.7
-language-selector==0.1
-lark==1.1.2
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy_loader==0.3
-libclang==16.0.0
-librosa==0.9.1
-lightning-utilities==0.9.0
-linkify-it-py==1.0.3
-lit==16.0.6
-llvmlite==0.39.0
-lmdb==1.4.1
-lpips==0.1.4
-lxml==4.9.2
-Markdown==3.4.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.2
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-mdit-py-plugins==0.3.3
-mdurl==0.1.2
-mistune==2.0.4
-ml-dtypes==0.1.0
-more-itertools==8.10.0
-mpmath==1.3.0
-multidict==6.0.4
-multiprocess==0.70.15
-multitasking==0.0.11
-nbclassic==0.5.1
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
-netifaces==0.11.0
-networkx==3.1
-nltk==3.8.1
-notebook==6.5.2
-notebook_shim==0.2.2
-numba==0.56.4
-numpy==1.23.5
-oauthlib==3.2.0
-olefile==0.46
-omegaconf==2.0.6
-open-clip-torch @ https://github.com/mlfoundations/open_clip/archive/bb6e834e9c70d9c27d0dc3ecedeebeaeb1ffad6b.zip
-opt-einsum==3.3.0
-orjson==3.9.2
-packaging==23.0
-pandas==1.5.3
-pandas-datareader==0.10.0
-pandas-ta==0.3.14b0
-pandocfilters==1.5.0
-paramiko==3.0.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-piexif==1.1.3
-Pillow==9.5.0
-platformdirs==3.8.1
-plotly==5.13.0
-pooch==1.7.0
-portalocker==2.7.0
-praat-parselmouth==0.4.3
-prometheus-client==0.16.0
-prompt-toolkit==3.0.36
-protobuf==3.20.0
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==11.0.0
-pyarrow-hotfix==0.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.20.1
-pycodestyle==2.10.0
-pycparser==2.21
-pycups==2.0.1
-pydantic==1.10.11
-pydeck==0.8.0
-pydot==1.4.2
-pydub==0.25.1
-Pygments==2.14.0
-PyGObject==3.42.1
-PyJWT==2.4.0
-pylibacl==0.6.0
-Pympler==1.0.1
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pypng==0.20220715.0
-PyQt5==5.15.6
-PyQt5-sip==12.9.1
-pyrsistent==0.19.3
-PySocks==1.7.1
-python-apt==2.4.0+ubuntu2
-python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==1.0.0
-python-editor==1.0.4
-python-json-logger==2.0.4
-python-multipart==0.0.6
-pytz==2022.7.1
-pytz-deprecation-shim==0.1.0.post0
-PyWavelets==1.4.1
-pyworld==0.3.4
-pyxattr==0.7.2
-PyYAML==6.0.1
-pyzmq==25.0.0
-qrcode==7.4.2
-qtconsole==5.4.0
-QtPy==2.3.0
-questionary==1.10.0
-readchar==4.0.5
-realesrgan==0.3.0
-regex==2023.3.23
-reportlab==3.6.8
-requests==2.27.1
-requests-cache==0.9.8
-requests-oauthlib==1.3.1
-resampy==0.4.2
-resize-right==0.0.2
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rich==13.5.2
-rsa==4.9
-sacrebleu==2.3.1
-schedule==1.2.1
-scikit-image==0.20.0
-scikit-learn==1.2.1
-scipy==1.9.3
-scour==0.38.2
-screen-resolution-extra==0.0.0
-seaborn==0.12.2
-SecretStorage==3.3.1
-semantic-version==2.10.0
-semver==2.13.0
-Send2Trash==1.8.0
-signalr-client-aio==0.0.1.6.2
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-soundfile==0.12.1
-soupsieve==2.3.2.post1
-stack-data==0.6.2
-starlette==0.22.0
-stftpitchshift==1.5.1
-streamlit==1.17.0
-sympy==1.12
-systemd-python==234
-tabulate==0.9.0
-tb-nightly==2.14.0a20230710
-tenacity==8.2.0
-termcolor==2.2.0
-terminado==0.17.1
-thefuzz==0.19.0
-threadpoolctl==3.1.0
-tifffile==2023.7.4
-tiktoken==0.4.0
-timm==0.6.7
-timple==0.1.5
-tinycss2==1.2.1
-tk==0.1.0
-tokentrim==0.1.10
-tomesd==0.1.2
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.9.0
-trampoline==0.1.2
-triton==2.0.0
-typing_extensions==4.4.0
-tzdata==2022.7
-tzlocal==4.2
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-uc-micro-py==1.0.2
-ufw==0.36.1
-unattended-upgrades==0.1
-uri-template==1.2.0
-url-normalize==1.4.3
-urllib3==1.26.14
-usb-creator==0.3.7
-uvicorn==0.22.0
-validators==0.20.0
-virtualenv==20.13.0+ds
-wadllib==1.3.6
-watchdog==2.2.1
-wcwidth==0.2.6
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.5.0
-websockets==10.4
-Werkzeug==3.0.1
-wget==3.2
-widgetsnbextension==4.0.5
-wrapt==1.14.1
-xkit==0.0.0
-xxhash==3.4.1
-yapf==0.40.1
-yarl==1.9.2
-yfinance==0.2.9
-zipp==1.0.0
+beautifulsoup4
+flask
+flask_cors
+requests
+json
+selenium
