--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,15 @@
     "bcryptjs": "^2.4.3",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.1.1",
     "next": "latest",
+    "next-client-cookies": "^1.1.0",
     "react": "latest",
     "react-dom": "latest",
+    "react-toastify": "^10.0.4",
     "tailwindcss-debug-screens": "^2.2.1"
   },
   "devDependencies": {
