--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,17 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.1",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.1.1",
-    "next": "latest",
+    "next": "^14.1.0",
     "next-client-cookies": "^1.1.0",
     "react": "latest",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "latest",
     "react-toastify": "^10.0.4",
     "tailwindcss-debug-screens": "^2.2.1"
